--- a/Lab03/style.css
+++ b/Lab03/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #3182BD;
+    background-color: #0E3651;
     color: #DEEBF7;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
